--- a/css/hugo-academic-group.css
+++ b/css/hugo-academic-group.css
@@ -28,13 +28,10 @@ header{
 }
 
 .header-content {
-    /* position: relative;
+    position: relative;
     width: 100%;
     height: 100%;
-    padding: 50px 15px; */
-    display:flex;/*Flex布局*/
-    display: -webkit-flex; /* Safari */
-    align-items: center;/*指定垂直居中*/
+    padding: 50px 15px;
 }
 
 .header-content .header-content-inner h1 {
@@ -215,6 +212,25 @@ span.darknav {
  *  Home Sections
  **************************************************/
 
+.justify-content-center {
+    justify-content: center !important;
+}
+
+.inner-row{
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -15px;
+    margin-left: -15px;
+    text-align: center;
+}
+
+.text-row{
+    position: relative;
+    width: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
+}
+
 .home-section {
     background-color: rgb(255, 255, 255);
     padding: 60px 0 60px 0;
@@ -241,6 +257,10 @@ span.darknav {
 }
 
 .section-heading h1 {
+    margin: 0 0 10px 0;
+}
+
+.section-heading h2{
     margin: 0 0 10px 0;
 }
 
@@ -677,6 +697,7 @@ section#projects.home-section .project-tags {
 #members > .container > .row > .col-md-3:nth-child(4n+1) {
     clear: both;
 }
+
 
 #participants > .container > .row > .col-md-2:nth-child(6n+1) {
     clear: both;
